// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentResultsFooter component renders correctly 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-1"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads Anchorlink MuiTypography-colorPrimary"
      type="button"
    >
      <span>
        MC: downloadList.clear
      </span>
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root buttonStyles-root-2 MuiButton-contained buttonStyles-contained-4 MuiButton-containedPrimary"
      data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (4)\\",\\"action\\":\\"[\\\\\\"http://doesnot-exist.com/fileName\\\\\\",\\\\\\"http://localhost/pim-document-id\\\\\\",\\\\\\"http://localhost:8000/sdp-document-file-name.pdf\\\\\\"]\\"}"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label buttonStyles-label-5"
      >
        MC: downloadList.download (4)
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <p
      class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
    >
      This site is protected by reCAPTCHA and the Google 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/privacy"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Privacy Policy
        </span>
      </a>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/terms"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Terms of Service
        </span>
      </a>
       apply.
    </p>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if download item is array 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-22"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads Anchorlink MuiTypography-colorPrimary"
      type="button"
    >
      <span>
        MC: downloadList.clear
      </span>
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root buttonStyles-root-23 MuiButton-contained buttonStyles-contained-25 MuiButton-containedPrimary"
      data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (2)\\",\\"action\\":\\"[\\\\\\"http://localhost/pim-document-id\\\\\\",\\\\\\"http://localhost:8000/sdp-document-file-name.pdf\\\\\\"]\\"}"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label buttonStyles-label-26"
      >
        MC: downloadList.download (2)
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <p
      class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
    >
      This site is protected by reCAPTCHA and the Google 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/privacy"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Privacy Policy
        </span>
      </a>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
        href="https://policies.google.com/terms"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Terms of Service
        </span>
      </a>
       apply.
    </p>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if onDownloadClick not passed 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-43"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
